--- a/lms/static/sass/base/_layouts.scss
+++ b/lms/static/sass/base/_layouts.scss
@@ -4,7 +4,7 @@
 // overriding existing styles on the body element
 // .view-incourse scopes these rules to be specific to student being in a course
 body.view-in-course {
-  background-color: $body-bg;
+  background-color: $pique-lesson-bg;
 
   // keep application of widths to window-wrap
   .window-wrap {
