--- a/lms/static/sass/elements/_controls.scss
+++ b/lms/static/sass/elements/_controls.scss
@@ -292,18 +292,16 @@
   @extend %t-copy-base;
   letter-spacing: 0; // reset letterspacing from elsewhere
   @extend %btn-primary;
-  border: 1px solid darken($action-primary-bg,10%);
   border-radius: 3px;
   padding: 8px $baseline;
   background-color: transparent;
-  color: darken($action-primary-bg,10%);
+  color: $action-primary-bg;
   text-align: center;
 
   &:hover,
   &:focus {
-    border: 1px solid transparent;
-    background-color: $action-primary-bg;
-    color: $action-primary-fg;
+    color: $white;
+    background-color: $pique-tap-color;
     text-decoration: none;
   }
 }
