--- a/lms/static/sass/shared/_forms.scss
+++ b/lms/static/sass/shared/_forms.scss
@@ -64,7 +64,6 @@ button,.button {
   padding: 4px 20px;
   text-transform: uppercase;
   vertical-align: top;
-  color: $white !important;
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-tap-highlight-color: transparent;
@@ -74,6 +73,10 @@ button,.button {
     pointer-events: none;
     opacity: 0.5;
     cursor: not-allowed;
+  }
+
+  &.show, &.check {
+    color: white !important;
   }
 
   &.show {
