--- a/lms/static/sass/views/_account-settings.scss
+++ b/lms/static/sass/views/_account-settings.scss
@@ -267,8 +267,6 @@
                         padding: 0;
 
                         &:focus, &:hover, &:active {
-                            background-color: transparent;
-                            color: $m-blue-d3;
                             border: none;
                         }
                     }
